# EventDriven

./: README.md  app.py  const.py  docker-compose.yml  example.http  hello_world.py  pyproject.toml  sample_data.json  tables.sql
db/: agg.py  query1.sql  query2.sql  sink.py
models/: __init__.py  coin.py  coin_db.py
requester/: coin.py  stock.py
