[tool.poetry]
name = "eventdriven"
version = "0.1.0"
description = ""
authors = ["Gabriel Mizuno <gabrielmizuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
faust = "^1.10.4"
setuptools = "^68.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

